style: fix z-index header, sidenav

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,10 +52,6 @@ body {
   min-width: 100%;
 }
 
-#root:has(.sidenav.active) {
-  margin-left: 180px;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -85,7 +81,7 @@ header {
   top: 0;
   left: 0;
   background: var(--dark-blue);
-  z-index: 2;
+  z-index: 3;
 }
 nav {
   display: flex;
@@ -258,7 +254,7 @@ nav .img-transition:hover {
   flex-direction: column;
   gap: 2em;
   padding: 8vh 1em;
-  z-index: 1;
+  z-index: 3;
   background-color: hsla(216, 43%, 5%, 0.99);
   backdrop-filter: blur(8px);
   transition: 300ms ease-in;
@@ -268,12 +264,25 @@ nav .img-transition:hover {
   left: 0;
 }
 
+.sidenav a {
+  color: #fefefe;
+}
+.sidenav a.active {
+  color: var(--active-orange);
+}
+
+.sidenav h4 {
+  padding-bottom: 1em;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.17);
+}
+
 .sidenav ul {
   width: 100%;
   display: flex;
   flex-direction: column;
   list-style-type: none;
   gap: 1em;
+  padding: 0.5em 0;
 }
 
 .sidenav ul button {
